Update index.html to include level display and updated instructions

--- a/worm_game/index.html
+++ b/worm_game/index.html
@@ -15,6 +15,10 @@
                 <span>Score: </span>
                 <span id="current-score">0</span>
             </div>
+            <div class="level">
+                <span>Level: </span>
+                <span id="current-level">1</span>
+            </div>
             <div class="high-score">
                 <span>High Score: </span>
                 <span id="high-score">0</span>
@@ -31,7 +35,7 @@
 
         <div class="instructions">
             <h3>How to Play</h3>
-            <p>Use arrow keys to move the worm. Eat the red food to grow and increase your score. Don't hit the walls or yourself!</p>
+            <p>Use arrow keys to move the worm. Eat 10 food items to advance to the next level with more walls! Don't hit the walls, boundaries, or yourself!</p>
         </div>
 
         <div id="game-over" class="game-over hidden">
