--- a/flappy_bird/index.html
+++ b/flappy_bird/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Flappy Bird</title>\n    <style>\n        body {\n            display: flex;\n            justify-content: center;\n            align-items: center;\n            height: 100vh;\n            margin: 0;\n            background: #70c5ce;\n        }\n        canvas {\n            border: 2px solid #000;\n        }\n    </style>\n</head>\n<body>\n    <canvas id="flappyBirdCanvas" width="320" height="480"></canvas>\n    <script src="game.js"></script>\n</body>\n</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flappy Bird Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <canvas id="gameCanvas" width="480" height="320"></canvas>
+    <script src="game.js"></script>
+</body>
+</html>
